# GraphSwarm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GITHUB_SETUP.md  HANDOFF.md  LICENSE  README.md  ROADMAP.md  SETUP_COMPLETE.md  setup.ps1  setup.sh
.claude/skills/graphswarm/: SKILL.md
.cursor/rules/: graphswarm.mdc
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/workflows/: ci.yml  release.yml
benches/: action_logging.rs  graph_traversal.rs  indexing_speed.rs  query_latency.rs
docs/: ARCHITECTURE.md  ROADMAP.md
examples/: index_flask_repo.rs  query_api.rs  run_mcp_server.rs
graphswarm_output/: graph.json  test.json
src/: error.rs  lib.rs  main.rs
src/cli/: assets.rs  export_cmd.rs  index_cmd.rs  install_cmd.rs  mod.rs  query_cmd.rs  server_cmd.rs
src/indexer/: call_graph.rs  extractor.rs  mod.rs  parser.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
src/query/: api.rs  mod.rs  ranker.rs  relevance.rs
src/storage/: graph_queries.rs  kv_backend.rs  mod.rs  schema.rs
src/tracker/: action_log.rs  history.rs  logger.rs  mod.rs
src/utils/: config.rs  logger.rs  mod.rs
src/watcher/: file_watcher.rs  mod.rs  reconciler.rs
tests/: indexer_tests.rs  integration_tests.rs  mcp_tests.rs  query_tests.rs  watcher_tests.rs
